clash-tracker/main/objects/Clan_War__c/Clan_War__c.object-meta.xml
<CustomObject>
    <label>Clan War</label>
    <nameField>
        <label>Clan War Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clan Wars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>