clash-tracker/main/objects/Clan_War__c/fields/Clan__c.field-meta.xml
<CustomField>
    <fullName>Clan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clan</label>
    <referenceTo>Clan__c</referenceTo>
    <relationshipLabel>Clan Wars</relationshipLabel>
    <relationshipName>Clan_Wars</relationshipName>
    <type>Lookup</type>
</CustomField>