clash-tracker/main/objects/Clan_War__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <length>8</length>
    <type>Text</type>
</CustomField>