clash-tracker/main/objects/Clan_War__c/fields/Preparation_Time__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Time__c</fullName>
    <label>Preparation Time</label>
    <type>DateTime</type>
</CustomField>