clash-tracker/main/objects/Clan_War__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>64</length>
    <type>Text</type>
</CustomField>